@@ -4,18 +4,23 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
+group = 'org.flightsim'
+version = '1.0-SNAPSHOT'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 repositories {
     mavenCentral()
 }
 
 javafx {
-    version = '21'
+    version = '21.0.2'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
 application {
-    mainClass = 'org.flightsim.Main'
-    applicationDefaultJvmArgs = ["--enable-native-access=ALL-UNNAMED"]
+    mainClass = 'org.flightsim.ui.SimulationApp'
 }
-
-compileJava.options.encoding = 'UTF-8'
